@@ -1,7 +1,9 @@
 package com.sungho.letterpick.member.adapter.webapi;
 
+import static com.sungho.letterpick.common.auth.SecurityAuthorities.ROLE_USER;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.authentication;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
@@ -10,18 +12,18 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.sungho.letterpick.LetterPickTestConfiguration;
-import com.sungho.letterpick.common.auth.LoginUser;
+import com.sungho.letterpick.common.auth.WithAdminUser;
+import com.sungho.letterpick.member.adapter.security.CustomOAuth2Principal;
+import com.sungho.letterpick.member.adapter.persistence.MemberRepository;
 import com.sungho.letterpick.member.application.provided.MemberNicknameChangeRequest;
 import com.sungho.letterpick.member.application.provided.MemberSuspendRequest;
 import com.sungho.letterpick.member.application.provided.MemberWithdrawByAdminRequest;
-import com.sungho.letterpick.member.adapter.persistence.MemberRepository;
 import com.sungho.letterpick.member.domain.Member;
 import com.sungho.letterpick.member.domain.MemberFixture;
 import com.sungho.letterpick.member.domain.MemberStatus;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -29,14 +31,15 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
 import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.client.authentication.OAuth2AuthenticationToken;
+import org.springframework.security.oauth2.core.user.DefaultOAuth2User;
+import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 import tools.jackson.databind.ObjectMapper;
 
-@Disabled("보안 빈 영역 정리(시큐리티 규칙 테스트 도입) 후 축소·재설계 예정")
 @SpringBootTest
 @AutoConfigureMockMvc
 @ActiveProfiles("test")
@@ -64,7 +67,8 @@ class MemberControllerIntegrationTest {
         MemberNicknameChangeRequest request = new MemberNicknameChangeRequest("새닉네임");
 
         mockMvc.perform(patch("/api/v1/members/me")
-                        .with(authentication(selfAuth(saved.getId())))
+                        .with(authentication(selfAuth(saved)))
+                        .with(csrf().asHeader())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isNoContent());
@@ -79,7 +83,8 @@ class MemberControllerIntegrationTest {
         Member saved = memberRepository.save(MemberFixture.createMember());
 
         mockMvc.perform(delete("/api/v1/members/me")
-                        .with(authentication(selfAuth(saved.getId()))))
+                        .with(authentication(selfAuth(saved)))
+                        .with(csrf().asHeader()))
                 .andExpect(status().isNoContent());
 
         Member found = memberRepository.findById(saved.getId()).orElseThrow();
@@ -87,13 +92,14 @@ class MemberControllerIntegrationTest {
     }
 
     @Test
+    @WithAdminUser
     @DisplayName("관리자가 회원을 정지하면 상태가 SUSPENDED로 전이된다")
     void suspend_flow() throws Exception {
         Member saved = memberRepository.save(MemberFixture.createMember());
         MemberSuspendRequest request = new MemberSuspendRequest(saved.getId());
 
         mockMvc.perform(post("/api/v1/admin/members/suspension")
-                        .with(authentication(adminAuth()))
+                        .with(csrf().asHeader())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isNoContent());
@@ -103,6 +109,7 @@ class MemberControllerIntegrationTest {
     }
 
     @Test
+    @WithAdminUser
     @DisplayName("관리자가 정지된 회원을 탈퇴 처리하면 상태가 DEACTIVATED로 전이된다")
     void withdrawByAdmin_flow() throws Exception {
         Member member = MemberFixture.createMember();
@@ -111,7 +118,7 @@ class MemberControllerIntegrationTest {
         MemberWithdrawByAdminRequest request = new MemberWithdrawByAdminRequest(saved.getId());
 
         mockMvc.perform(post("/api/v1/admin/members/withdrawal")
-                        .with(authentication(adminAuth()))
+                        .with(csrf().asHeader())
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isNoContent());
@@ -131,19 +138,18 @@ class MemberControllerIntegrationTest {
                 .andExpect(jsonPath("$.paths['/api/v1/admin/members/withdrawal'].post").exists());
     }
 
-    private Authentication selfAuth(Long memberId) {
-        return new UsernamePasswordAuthenticationToken(
-                new LoginUser(memberId),
-                null,
-                Collections.emptyList()
+    private Authentication selfAuth(Member member) {
+        OAuth2User delegate = new DefaultOAuth2User(
+                List.of(new SimpleGrantedAuthority(ROLE_USER)),
+                Map.of("sub", "test-sub-" + member.getId()),
+                "sub"
+        );
+        CustomOAuth2Principal principal = CustomOAuth2Principal.existing(member, delegate);
+        return new OAuth2AuthenticationToken(
+                principal,
+                principal.getAuthorities(),
+                "test-registration"
         );
     }
 
-    private Authentication adminAuth() {
-        return new UsernamePasswordAuthenticationToken(
-                new LoginUser(999L),
-                null,
-                List.of(new SimpleGrantedAuthority("ROLE_ADMIN"))
-        );
-    }
 }
